# exercise-conan-crosscompile

./: CMakeLists.txt  README.md  conan-armv8  conanfile.txt  main.cpp
